--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -5,25 +6,61 @@
 }
 
 :root {
-    background-color: antiquewhite;
+ --secondary-color: #6173F4;
+ --main-color: #FCEFED;
+ --secondary-font-color: #FCEFED;
+ --main-font-color: #3B2E40:
 }
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 1fr;
     grid-template-rows: repeat(4, 1fr);
-    background-color:rgb(49, 23, 74);
+    background-color: var(--main-color);
     margin: 16px;
 }
 
 .sidebar {
     grid-column: 1 / 2;
     grid-row: 1 / 5;
-    background-color: #d44;
+    background-color: var(--secondary-color, #12d);
+    color: var(--secondary-font-color, #fff);
+    padding: 32px;
+}
+
+.logo {
+    display: flex;
+    gap: 12px;
+    justify-content: left;
+    align-items: center;
+    font-size: 2rem;
+    margin-bottom: 48px;
+}
+
+.action {
+    margin-bottom: 24px;
+    display: flex;
+    gap: 12px;
+    justify-content: left;
+    align-items: center;
+    font-size: 1.4rem;
+}
+
+.action:hover {
+    cursor:pointer;
+}
+
+.action > img {
+    margin-right: 10px;
+}
+
+#communities {
+    margin-bottom: 48px;
+    
 }
 
 .header {
-    grid-column: 2 / 4;
+    grid-column: 2 / 5;
     grid-row: 1 / 2;
     background-color: chocolate;
     display: grid;
@@ -35,7 +72,7 @@
 }
 
 .info {
-    grid-column: 2 / 4;
+    grid-column: 2 / 5;
     grid-row: 2 / 3;
     background-color: chocolate;
 }
@@ -43,20 +80,20 @@
 .projects {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-    grid-column: 2 / 3;
+    grid-column: 2 / 4;
     background-color: #952;
     grid-row: 3 / 5;
 }
 
 .announcements {
     background-color: azure;
-    grid-column: 3 / 4;
+    grid-column: 4 / 5;
     grid-row: 3 / 4;
 }
 
 .trending {
     background-color: #abc;
-    grid-column: 3 / 4;
+    grid-column: 4 / 5;
     grid-row: 4 / 5;
 }
 
