--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -7,20 +6,23 @@
 
 body {
     font-size: 16px;
+    color: var(--main-font-color);
 }
 
 :root {
- --secondary-color: #6173F4;
- --main-color: #FCEFED;
- --secondary-font-color: #FCEFED;
- --main-font-color: #F35E3E:
+    --project-sidebar-color: #F35E3E;
+    --main-font-color: #3B2E40;
+    --main-background-color: #d0bab8;
+    --secondary-color: #6173F4;
+    --main-color: #FCEFED;
+    --secondary-font-color: #fcefed;
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr 1fr;
-    grid-template-rows: 220px 2fr 1fr;
-    background-color: var(--main-color);
+    grid-template-rows: 220px 1fr 1fr;
+    background-color: var(--main-background-color);
 }
 
 .sidebar {
@@ -32,9 +34,10 @@ body {
 }
 
 .logo {
-    display: flex;
-    gap: 12px;
-    justify-content: left;
+    display: grid;
+    grid-template-columns: 32px 1fr;
+    justify-items: left;
+    gap: 24px;
     align-items: center;
     font-size: 2em;
     font-weight: bold;
@@ -42,16 +45,17 @@ body {
 }
 
 .action {
+    display: grid;
+    grid-template-columns: 32px 1fr;
+    justify-items: left;
+    gap: 18px;
     margin-bottom: 24px;
-    display: flex;
-    gap: 12px;
-    justify-content: left;
     align-items: center;
     font-size: 1.3rem;
 }
 
 .action:hover {
-    cursor:pointer;
+    cursor: pointer;
     transform: scale(1.02);
     font-weight: bold;
 }
@@ -66,16 +70,15 @@ body {
 
 #communities {
     margin-bottom: 48px;
-    
 }
 
 .header-container {
     grid-column: 2 / 5;
     grid-row: 1 / 2;
     background-color: var(--main-color);
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     padding: 24px 48px;
 }
 
@@ -92,7 +95,7 @@ body {
 }
 
 #search-icon {
-    margin-right: 24px;
+    margin-right: 16px;
 }
 
 #search {
@@ -104,7 +107,8 @@ body {
     background-color: #d0bab8;
 }
 
-#search-icon:hover , #notification-icon:hover{
+#search-icon:hover,
+#notification-icon:hover {
     cursor: pointer;
 }
 
@@ -148,7 +152,7 @@ body {
     font-weight: bold;
 }
 
-#user-name > #name{
+#user-name > #name {
     font-size: 1.7rem;
     font-weight: bold;
 }
@@ -177,19 +181,29 @@ button:hover {
 }
 
 .projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
+    margin-top: 32px;
+    margin-left: 16px;
     grid-column: 2 / 4;
     grid-row: 2 / 4;
-    background-color: #d0bab8;
+    background-color: var(--main-background-color);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-rows: 32px 1fr;
+}
 
+.announcements > p , .trending > p , 
+.projects > p   {
+    margin: 10px 16px;
+    font-size: 1.4rem;
+    font-weight: bold;
 }
 
 .project {
-    background-color: #F35E3E;
+    background-color: var(--project-sidebar-color);
     border-radius: 12px;
     margin: 16px;
-    display: flex;
+    display: grid;
+    border: 6px solid red;
 }
 
 .project-container {
@@ -202,12 +216,15 @@ button:hover {
 }
 
 .project-info {
+    justify-self: start;
     align-self: start;
     padding: 32px 32px 16px 32px;
 }
 
 .project-links {
+    justify-self: end;
     align-self: end;
+    margin-top: auto;
 }
 
 .project-links > img {
@@ -215,9 +232,14 @@ button:hover {
     margin-bottom: 16px;
 }
 
+.project-links > img:hover {
+    cursor: pointer;
+}
+
 .project-name {
     font-size: 1.5rem;
     margin-bottom: 8px;
+    font-weight: bold;
 }
 
 .project-description {
@@ -226,17 +248,67 @@ button:hover {
 }
 
 .announcements {
-    background-color: azure;
+    margin-top: 32px;
+    margin-right: 16px;
     grid-column: 4 / 5;
     grid-row: 2 / 3;
+    display: grid;
+    grid-template-rows: 32px 1fr;
+}
+
+
+
+.announcements-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 16px;
+    padding: 16px;
+    border-radius: 12px;
+    background-color: var(--secondary-font-color);
+}
+
+.announcement {
+    padding: 16px;
+}
+
+.announcement-name {
+    font-size: 1.1rem;
+    margin-bottom: 8px;
+    font-weight: bold;
 }
 
 .trending {
-    background-color: #abc;
+    margin-top: 32px;
+    margin-right: 16px;
     grid-column: 4 / 5;
     grid-row: 3 / 4;
+    display: grid;
+    grid-template-rows: 32px 1fr;
+}
+
+.trending-container {
+    display: flex;
+    flex-direction: column;
+    margin: 16px;
+    padding: 16px;
+    border-radius: 12px;
+    margin-bottom: 30%;
+    background-color: var(--secondary-font-color);
 }
 
 
 
+.trend {
+    padding: 16px;
+    display: flex;
+    align-items: center;
+}
 
+.trend>img {
+    margin-right: 12px;
+}
+
+.trend-name > span:nth-child(1){
+    font-weight: bold;
+}
