--- a/style.css
+++ b/style.css
@@ -299,9 +299,14 @@ button:hover {
 
 
 .trend {
-    padding: 16px;
     display: flex;
     align-items: center;
+    margin-bottom: 16px;
+    padding: 8px;
+}
+
+.trend:hover {
+    cursor: pointer;
 }
 
 .trend>img {
